Fix social-links position on mobile.

--- a/layout.css
+++ b/layout.css
@@ -63,7 +63,7 @@ sup .fas {
 }
 
 #social-links .fas, #social-links .fab {
-	padding: 0px 5%;
+	padding: 0px 3%;
 }
 
 #social-links .fas:hover, #social-links .fab:hover {
@@ -197,6 +197,11 @@ sup .fas {
 
 	#social-links {
 		grid-area: links;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-template-rows: 1fr;
+		padding-left: 50px;
+		padding-right: 50px;
 	}
 
 	#desc-separator {
